--- a/Desafio 07/Desafio 07.ipynb
+++ b/Desafio 07/Desafio 07.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "4  1-8cb748d7d25cb718673ce9ab4f5376f2  9321  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,172 @@
        "4  REABASTECER         10    43  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Criando features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset2['sum'] = dataset2['Açaí-Guaraná'] + dataset2['Citrus'] + dataset2['Maçã-Verde'] + dataset2['Original_269'] + dataset2['Original_473'] + dataset2['Pêssego'] + dataset2['Tangerina'] + dataset2['Zero']\n",
+    "dataset2['mean'] = dataset2[['Açaí-Guaraná', 'Citrus', 'Maçã-Verde', 'Original_269','Original_473','Pêssego','Tangerina','Zero']].mean(axis=1)\n",
+    "dataset2['median'] = dataset2[['Açaí-Guaraná', 'Citrus', 'Maçã-Verde', 'Original_269','Original_473','Pêssego','Tangerina','Zero']].median(axis=1)\n",
+    "dataset2['median'] = dataset2[['Açaí-Guaraná', 'Citrus', 'Maçã-Verde', 'Original_269','Original_473','Pêssego','Tangerina','Zero']].min(axis=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Açaí-Guaraná</th>\n",
+       "      <th>Citrus</th>\n",
+       "      <th>Maçã-Verde</th>\n",
+       "      <th>Original_269</th>\n",
+       "      <th>Original_473</th>\n",
+       "      <th>Pêssego</th>\n",
+       "      <th>TARGET</th>\n",
+       "      <th>Tangerina</th>\n",
+       "      <th>Zero</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26</td>\n",
+       "      <td>28</td>\n",
+       "      <td>43</td>\n",
+       "      <td>24</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>24</td>\n",
+       "      <td>13</td>\n",
+       "      <td>222</td>\n",
+       "      <td>27.750</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41</td>\n",
+       "      <td>9</td>\n",
+       "      <td>40</td>\n",
+       "      <td>53</td>\n",
+       "      <td>78</td>\n",
+       "      <td>41</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>38</td>\n",
+       "      <td>21</td>\n",
+       "      <td>321</td>\n",
+       "      <td>40.125</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>62</td>\n",
+       "      <td>21</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>15</td>\n",
+       "      <td>51</td>\n",
+       "      <td>232</td>\n",
+       "      <td>29.000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19</td>\n",
+       "      <td>43</td>\n",
+       "      <td>35</td>\n",
+       "      <td>29</td>\n",
+       "      <td>61</td>\n",
+       "      <td>18</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>37</td>\n",
+       "      <td>50</td>\n",
+       "      <td>292</td>\n",
+       "      <td>36.500</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8</td>\n",
+       "      <td>32</td>\n",
+       "      <td>22</td>\n",
+       "      <td>REABASTECER</td>\n",
+       "      <td>10</td>\n",
+       "      <td>43</td>\n",
+       "      <td>163</td>\n",
+       "      <td>20.375</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Açaí-Guaraná  Citrus  Maçã-Verde  Original_269  Original_473  Pêssego  \\\n",
+       "0            26      28          43            24            36       28   \n",
+       "1            41       9          40            53            78       41   \n",
+       "2             4      19          25            62            21       35   \n",
+       "3            19      43          35            29            61       18   \n",
+       "4             6      16          26             8            32       22   \n",
+       "\n",
+       "        TARGET  Tangerina  Zero  sum    mean  median  \n",
+       "0       NORMAL         24    13  222  27.750      13  \n",
+       "1       NORMAL         38    21  321  40.125       9  \n",
+       "2       NORMAL         15    51  232  29.000       4  \n",
+       "3       NORMAL         37    50  292  36.500      18  \n",
+       "4  REABASTECER         10    43  163  20.375       6  "
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,15 +603,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7983, 9)\n",
-      "(1996, 9)\n"
+      "(7983, 12)\n",
+      "(1996, 12)\n"
      ]
     }
    ],
@@ -465,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -517,6 +682,9 @@
        "      <th>Pêssego</th>\n",
        "      <th>Tangerina</th>\n",
        "      <th>Zero</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -530,6 +698,9 @@
        "      <td>43</td>\n",
        "      <td>17</td>\n",
        "      <td>49</td>\n",
+       "      <td>222</td>\n",
+       "      <td>27.750</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2547</th>\n",
@@ -541,6 +712,9 @@
        "      <td>37</td>\n",
        "      <td>16</td>\n",
        "      <td>38</td>\n",
+       "      <td>210</td>\n",
+       "      <td>26.250</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3255</th>\n",
@@ -552,6 +726,9 @@
        "      <td>39</td>\n",
        "      <td>41</td>\n",
        "      <td>21</td>\n",
+       "      <td>240</td>\n",
+       "      <td>30.000</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9320</th>\n",
@@ -563,6 +740,9 @@
        "      <td>15</td>\n",
        "      <td>34</td>\n",
        "      <td>65</td>\n",
+       "      <td>257</td>\n",
+       "      <td>32.125</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4149</th>\n",
@@ -574,6 +754,9 @@
        "      <td>21</td>\n",
        "      <td>15</td>\n",
        "      <td>51</td>\n",
+       "      <td>166</td>\n",
+       "      <td>20.750</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -587,21 +770,95 @@
        "9320            43       7          10            25            58       15   \n",
        "4149            10      19          21            25             4       21   \n",
        "\n",
-       "      Tangerina  Zero  \n",
-       "7415         17    49  \n",
-       "2547         16    38  \n",
-       "3255         41    21  \n",
-       "9320         34    65  \n",
-       "4149         15    51  "
+       "      Tangerina  Zero  sum    mean  median  \n",
+       "7415         17    49  222  27.750       3  \n",
+       "2547         16    38  210  26.250       6  \n",
+       "3255         41    21  240  30.000       6  \n",
+       "9320         34    65  257  32.125       7  \n",
+       "4149         15    51  166  20.750       4  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Açaí-Guaraná      int64\n",
+       "Citrus            int64\n",
+       "Maçã-Verde        int64\n",
+       "Original_269      int64\n",
+       "Original_473      int64\n",
+       "Pêssego           int64\n",
+       "Tangerina         int64\n",
+       "Zero              int64\n",
+       "sum               int64\n",
+       "mean            float64\n",
+       "median            int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_preprocessed = scaler.fit_transform(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_val_preprocessed = scaler.transform(x_val)"
    ]
   },
   {
@@ -613,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,32 +880,33 @@
     "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.ensemble import AdaBoostClassifier"
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = RandomForestClassifier(max_depth=10)"
+    "clf = SVC()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.fit(x_train, y_train)\n",
+    "clf.fit(x_train_preprocessed, y_train)\n",
     "\n",
-    "pred_train = clf.predict(x_train)"
+    "pred_train = clf.predict(x_train_preprocessed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -657,12 +915,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      NORMAL       0.97      0.99      0.98      5326\n",
-      " REABASTECER       0.97      0.94      0.95      2657\n",
+      "      NORMAL       0.83      0.86      0.84      5208\n",
+      " REABASTECER       0.72      0.66      0.69      2775\n",
       "\n",
-      "    accuracy                           0.97      7983\n",
-      "   macro avg       0.97      0.96      0.97      7983\n",
-      "weighted avg       0.97      0.97      0.97      7983\n",
+      "    accuracy                           0.79      7983\n",
+      "   macro avg       0.77      0.76      0.77      7983\n",
+      "weighted avg       0.79      0.79      0.79      7983\n",
       "\n"
      ]
     }
@@ -680,16 +938,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_val = clf.predict(x_val)"
+    "pred_val = clf.predict(x_val_preprocessed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -698,12 +956,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      NORMAL       0.93      0.84      0.88      1356\n",
-      " REABASTECER       0.72      0.86      0.78       640\n",
+      "      NORMAL       0.83      0.80      0.82      1356\n",
+      " REABASTECER       0.61      0.66      0.63       640\n",
       "\n",
-      "    accuracy                           0.85      1996\n",
-      "   macro avg       0.82      0.85      0.83      1996\n",
-      "weighted avg       0.86      0.85      0.85      1996\n",
+      "    accuracy                           0.76      1996\n",
+      "   macro avg       0.72      0.73      0.73      1996\n",
+      "weighted avg       0.76      0.76      0.76      1996\n",
       "\n"
      ]
     }
@@ -714,14 +972,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8471943887775552\n"
+      "0.7570140280561122\n"
      ]
     }
    ],
@@ -738,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,24 +1005,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 0.845691382765531\n",
-      "7 0.814128256513026\n",
-      "6 0.7955911823647295\n",
-      "5 0.7805611222444889\n",
-      "4 0.7540080160320641\n",
-      "3 0.75\n"
+      "11 0.7019038076152304\n",
+      "10 0.7029058116232465\n",
+      "9 0.7034068136272545\n",
+      "8 0.7034068136272545\n",
+      "7 0.7069138276553106\n",
+      "6 0.7024048096192385\n",
+      "5 0.7049098196392786\n",
+      "4 0.7094188376753507\n",
+      "3 0.7099198396793587\n"
      ]
     }
    ],
    "source": [
-    "model = RandomForestClassifier(max_depth=10)\n",
+    "model = SVC()\n",
     "\n",
     "for i in range(x_train.shape[1], 2, -1):\n",
     "    skb = SelectKBest(k = i)\n",
@@ -776,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -784,20 +1045,20 @@
      "output_type": "stream",
      "text": [
       "1 0.6788577154308617\n",
-      "3 0.6963927855711423\n",
-      "5 0.7269539078156313\n",
-      "7 0.7805611222444889\n",
-      "9 0.8351703406813628\n",
-      "11 0.844188376753507\n",
-      "13 0.8532064128256514\n",
-      "15 0.8567134268537074\n",
-      "17 0.8547094188376754\n",
-      "19 0.8542084168336673\n",
-      "21 0.8562124248496994\n",
-      "23 0.844689378757515\n",
-      "25 0.8461923847695391\n",
-      "27 0.8552104208416834\n",
-      "29 0.843186372745491\n"
+      "3 0.7715430861723447\n",
+      "5 0.7790581162324649\n",
+      "7 0.7980961923847696\n",
+      "9 0.8171342685370742\n",
+      "11 0.8331663326653307\n",
+      "13 0.8512024048096193\n",
+      "15 0.8552104208416834\n",
+      "17 0.8532064128256514\n",
+      "19 0.8522044088176353\n",
+      "21 0.8527054108216433\n",
+      "23 0.842685370741483\n",
+      "25 0.8527054108216433\n",
+      "27 0.8471943887775552\n",
+      "29 0.8517034068136272\n"
      ]
     }
    ],
